# alfred

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alfred.service  docker-compose.yml  install.sh  mypi.ini  pyproject.toml  run-bot.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: check-docs-skip.yml  check-docs.yml  check-formatting-skip.yml  check-formatting.yml  check-linters-skip.yml  check-linters.yml  check-static-analysis-skip.yml  check-static-analysis.yml  check-translations-skip.yml  check-translations.yml  create-release.yml  deploy-container.yml  deploy-documentation.yml  gh-pages.yml  lint.yml  run-format-check.yml  run-linters.yml  run-static.yml  run-tests.yml  run-unit-tests-skip.yml  run-unit-tests.yml
docs/source/: alfred.chat.rst  alfred.core.rst  alfred.features.chat.rst  alfred.features.rst  alfred.rst  alfred.services.rst  alfred.util.rst  conf.py  index.rst  modules.rst
locales/en/LC_MESSAGES/: alfred.po
src/alfred/: __init__.py  autofields.py  bot.py  cli.py  config.py  context.py  db.py  exceptions.py  feature.py  fields.py  lock.py  logging.py  main.py  manor.py  models.py  translation.py  typing.py
src/alfred/chat/: __init__.py  constants.py  context.py  tools.py
src/alfred/core/: __init__.py  config.py  exceptions.py  feature.py  fields.py  models.py
src/alfred/features/: __init__.py  _ai.py  admin.py  chat.py  chatgpt.py  dalle.py  draw.py
src/alfred/features/chat/: __init__.py  activities.py  chatgpt.py  client.py  constants.py  context.py  enum.py  tools.py
src/alfred/features/requests/: __init__.py  overseerr.py
src/alfred/services/: __init__.py  api.py  manor.py
src/alfred/util/: __init__.py  autofields.py  translation.py  typing.py
tests/: __init__.py  test_placeholder.py
