[project]
name = "alfred"
version = "v2024.08.0"
description = "Default template for PDM package"
authors = [{ name = "Melissa Nuño", email = "melissa@dangle.dev" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "py-cord[speed,voice]>=2.6.0",
    "openai>=1.40.3",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "aiohttp[speedups]>=3.10.3",
    "pyyaml>=6.0.2",
    "tortoise-orm>=0.21.5",
    "aerich>=0.7.2",
    "fastapi>=0.112.0",
    "hypercorn[uvloop]>=0.17.3",
]

[tool.pdm.dev-dependencies]
dev = ["mypy>=1.11.0", "ruff>=0.5.0", "isort>=5.13.2", "black>=24.4.2"]
docs = ["sphinx>=7.4.7", "sphinx-rtd-theme>=2.0.0"]
test = ["pytest>=8.2.2"]
tools = ["bpython>=0.24"]
types = ["types-PyYAML>=6.0.12.20240311"]

[project.scripts]
alfred = "alfred.cli:main"

[project.entry-points."alfred.features"]
DallE = "alfred.features.dalle:DallE"
ChatGPT = "alfred.features.chat:Chat"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "B019",
    "BLE001",
    "D107",
    "D203",
    "D213",
    "EM101",
    "EM102",
    "FIX002",
    "G004",
    "PLR0911",
    "PYI034",
    "TCH004",
    "TD002",
    "TD003",
    "TRY003",
    "TRY400",
    "UP037",
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff]
line-length = 100

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
pre_start = { shell = "bash -c '{pdm} install &> /dev/null'" }
start = { cmd = "alfred", env_file = ".env" }
pre_debug = { shell = "bash -c '{pdm} install &> /dev/null'" }
debug = { cmd = "alfred", env = { LOG_LEVEL = "DEBUG" }, env_file = ".env" }
pre_pdb = { shell = "bash -c '{pdm} install &> /dev/null'" }
pdb = { cmd = "python -m pdb src/alfred/cli.py", env_file = ".env" }

lint = "make lint"
check-static = "make static-analysis"
check-format = "make check-formatting"
format = "make format"
test = { shell = "make run-unit-tests" }

extract-strings = "make extract-strings"
new-translation = "make new-translation LOCALE=\"{args}\""
update-translations = "make update-translations"
export-translations = "make export-translations"
check-translations = "make check-translations"

update-doc-stubs = "make update-doc-stubs"
generate-docs = "make generate-docs"
check-docs = "make check-docs"

pre_release = "{pdm} check"
release = "make release"

check.composite = [
    "{pdm} check-format",
    "{pdm} lint",
    "{pdm} check-static",
    "{pdm} test",
    "{pdm} check-docs",
]
